# CodeSnippetGenerator

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.c
